--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -30,6 +30,11 @@
         "Noto Color Emoji";
 }
 
+.fun {
+    width: 600px;
+    height: 600px;
+    background-color: #6f42c1;
+}
 .skills {
     width: 100%;
     max-width: 600px;
