--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -80,10 +80,12 @@
     from {
       margin-left: 100%;
       width: 10%;
+      transform: rotate(0deg);
     }
   
     to {
       margin-left: 0%;
       width: 50%;
+      transform: rotate(-1000deg);
     }
   }
