--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -68,6 +68,10 @@
     }
 }
 
+.fun {
+    width: 100%;
+    height: 100%;
+}
 
 .pickaxe {
     animation-duration: 3s;
@@ -86,6 +90,6 @@
     to {
       margin-left: 0%;
       width: 50%;
-      transform: rotate(-1000deg);
+      transform: rotate(-1080deg);
     }
   }
