--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -74,21 +74,19 @@
 
 .pickaxe {
     animation-duration: 3s;
-    animation-name: pickaxe;
+    animation-name: amanox;
     animation-timing-function: ease-out;
     animation-iteration-count: infinite;
   }
   
-  @keyframes pickaxe {
+  @keyframes amanox {
     from {
       margin-left: 100%;
       width: 10%;
-      transform: rotate(0deg);
     }
   
     to {
       margin-left: 0%;
       width: 50%;
-      transform: rotate(-1080deg);
     }
   }
