--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -72,7 +72,7 @@
     height: 350px;
 }
 
-.pickaxe {
+.amanox {
     animation-duration: 3s;
     animation-name: amanox;
     animation-timing-function: ease-out;
