--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -73,7 +73,10 @@
 }
 
 .amanox {
+    margin: 0%;
+    padding: 0%;
     position: center;
+    width: 80%;
     animation-duration: 3s;
     animation-name: amanox;
     animation-timing-function: ease-out;
